Теперь how to очень красивый + поменяла цвет текста при наборе тега (с белого на черный)

--- a/app/src/main/res/layout/activity_how_to_search.xml
+++ b/app/src/main/res/layout/activity_how_to_search.xml
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:layout_width="200dp"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:src="@drawable/trip_lan_sel"/>
         </LinearLayout>
@@ -85,9 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/city_zaglushka"/>
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:src="@drawable/trip_tags"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
