--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -43,6 +43,7 @@
                 android:text="Preferable tags"/>
 
             <EditText
+                android:id="@+id/tag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -50,7 +51,6 @@
                 android:background="@color/white"
                 android:padding="7dp"
                 android:hint="#Tags"
-                android:textColor="@color/white"
                 android:textColorLink="@color/white"/>
 
             <Button
