--- a/app/src/main/res/layout/activity_edit_profile_activity.xml
+++ b/app/src/main/res/layout/activity_edit_profile_activity.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:text="Profile" />
+            android:text="@string/profile" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:onClick="setAvatar"
-                    android:text="Edit avatar" />
+                    android:text="@string/edit_avatar" />
 
             </LinearLayout>
 
@@ -68,7 +68,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="Change name" />
+                        android:text="@string/change_name" />
 
                     <EditText
                         android:id="@+id/ed_name"
@@ -93,14 +93,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="Change e-mail" />
+                        android:text="@string/change_e_mail" />
 
                     <EditText
                         android:id="@+id/ed_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="UserEmail"
+                        android:hint="@string/useremail"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -124,7 +124,7 @@
             android:background="@color/common_google_signin_btn_text_dark_disabled"
             android:onClick="onConfrim"
             android:padding="20dp"
-            android:text="Confirm" />
+            android:text="@string/confirm" />
     </LinearLayout>
 
     <LinearLayout
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:text="Security" />
+            android:text="@string/security" />
 
         <Button
             android:id="@+id/change_pass"
@@ -150,7 +150,7 @@
             android:layout_marginTop="5dp"
             android:onClick="onChangePassConfirm"
             android:padding="20dp"
-            android:text="Change password" />
+            android:text="@string/change_password" />
     </LinearLayout>
 
 
