--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -164,7 +164,7 @@
                                 android:layout_gravity="center_horizontal"
                                 android:layout_marginTop="10dp"
                                 android:background="@color/colorPrimary"
-                                android:text="I'm in"
+                                android:text="@string/i_m_in"
                                 android:textColor="@color/white" />
 
                             <Button
