--- a/app/src/main/res/layout/change_pass_layout.xml
+++ b/app/src/main/res/layout/change_pass_layout.xml
@@ -11,7 +11,7 @@
         android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Old password">
+        android:hint="@string/old_password">
 
         <EditText
             android:id="@+id/input_password"
@@ -23,7 +23,7 @@
         android:id="@+id/input_layout_new_password1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="New password">
+        android:hint="@string/new_password">
 
         <EditText
             android:id="@+id/input_new_password1"
@@ -36,7 +36,7 @@
         android:id="@+id/input_layout_new_password2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Repeat your new password">
+        android:hint="@string/repeat_your_new_password">
 
         <EditText
             android:id="@+id/input_new_password2"
@@ -58,7 +58,7 @@
             android:layout_weight="1"
             android:onClick="changePass"
             android:padding="20dp"
-            android:text="Confirm" />
+            android:text="@string/confirm" />
 
         <Button
             android:id="@+id/cancel_pass_change"
@@ -67,7 +67,7 @@
             android:layout_gravity="end"
             android:layout_weight="1"
             android:padding="20dp"
-            android:text="Cancel" />
+            android:text="@string/cancel" />
     </LinearLayout>
 
 </LinearLayout>
