--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -52,7 +52,7 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date: "
+                    android:text="@string/date_dots"
                     android:textStyle="bold" />
 
                 <TextView
@@ -72,7 +72,7 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Language: "
+                    android:text="@string/language_dots"
                     android:textStyle="bold" />
 
                 <TextView
