--- a/app/src/main/res/layout/visitors_item.xml
+++ b/app/src/main/res/layout/visitors_item.xml
@@ -37,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name: "
+                    android:text="@string/name_dots"
                     android:textStyle="bold"
                     android:textSize="15sp"/>
                 <TextView
